# scandium

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml  release.yml  security.yml
configs/: airsim_demo.yaml  ardupilot_sitl.yaml  default.yaml  px4_sitl.yaml
configs/camera/: calib_example.yaml  extrinsics_example.yaml
configs/fiducials/: apriltag.yaml  aruco.yaml
configs/scenarios/: smoke.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: architecture.md  ardupilot.md  deployment.md  index.md  landability.md  mavlink.md  px4.md  simulation.md  testing.md
scripts/: benchmark_latency.py  calibrate_camera.py  run_sitl_ardupilot.sh  run_sitl_px4.sh
src/scandium/: __init__.py  __main__.py  cli.py  version.py
src/scandium/config/: __init__.py  loader.py  schema.py  validation.py
src/scandium/control/: __init__.py  fsm.py  guidance.py  params.py  safety.py
src/scandium/logging/: __init__.py  setup.py  telemetry.py
src/scandium/mavlink/: __init__.py  heartbeat.py  landing_target.py  offboard.py  transport.py
src/scandium/perception/: __init__.py  calib.py  camera.py
src/scandium/perception/fiducials/: __init__.py  apriltag_detector.py  aruco_detector.py  base.py
src/scandium/perception/landability/: __init__.py  base.py  heuristics.py  ml_plugin.py
src/scandium/perception/pose/: __init__.py  filtering.py  frames.py  pnp.py
src/scandium/sim/: __init__.py  airsim_bridge.py  scenario_runner.py  sitl_ardupilot.py  sitl_px4.py
src/scandium/utils/: __init__.py  io.py  math3d.py  throttling.py  time.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline_no_hw.py
tests/unit/: __init__.py  test_aruco_detector.py  test_config_schema.py  test_filtering.py  test_frames.py  test_fsm.py  test_landing_target_encode.py
